# homework-5

./: .gitignore  README.md  api_schema.yaml  pyproject.toml
cms/: db.sqlite3  pytest.ini
cms/api/: urls.py
cms/api/factories/: roles.py
cms/api/migrations/: 0001_initial.py
cms/api/models/: __init__.py  assignment.py  comment.py  course.py  enrollment.py  grade.py  lecture.py  submission.py  user.py
cms/api/permissions/: __init__.py  enrolled.py  owner.py  student.py  teacher.py
cms/api/serializers/: __init__.py  assignment.py  comment.py  course.py  enrollment.py  grade.py  lecture.py  submission.py  user.py
cms/api/services/: __init__.py  comment.py  course.py  submission.py  user.py
cms/api/tests/: conftest.py
cms/api/tests/models/: test_assignment.py  test_comment.py  test_course.py  test_enrollment.py  test_grade.py  test_lecture.py  test_submission.py  test_user.py
cms/api/tests/serializers/: test_assignment.py  test_comment.py  test_course.py  test_enrollment.py  test_grade.py  test_lecture.py  test_submission.py  test_user.py
cms/api/tests/views/: test_assignment.py  test_comment.py  test_course.py  test_enrollment.py  test_grade.py  test_lecture.py  test_submission.py  test_user.py
cms/api/views/: assignment.py  comment.py  course.py  enrollment.py  grade.py  lecture.py  submission.py  user.py
cms/cms/: settings.py  urls.py
